# cdk-sagemaker-model-deployer

./: .gitignore  README.md  blank.env  pyproject.toml  requirements.txt  settings.py
deployment/: model_deployer.py  settings.py
deployment/infra/batch_smp_infra/: README.md  app.py  cdk.context.json  requirements.txt  settings.py
deployment/infra/batch_smp_infra/stacks/batch_smp/: stack.py
deployment/infra/batch_smp_infra/stacks/batch_smp/stepfunctions/: extract_stepfunc.json
deployment/infra/batch_smp_infra/stacks/lambda_layers/: stack.py
deployment/infra/batch_smp_infra/stacks/lambda_layers/psycopglibs/python/psycopg2/: extras.py
deployment/infra/batch_smp_infra/tests/unit/: test_deployments_stack.py
deployment/pipelines/: smp-pipeline.py
models/pipeline1_models/model1/: model_config.json
models/pipeline1_models/model1/code/: inference.py
models/pipeline1_models/model1/model/: xgb_trained.json
